.archive/clusters/homelab-1/.network-policies/allow-ingress-from-prometheus/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-prometheus
spec:
  podSelector:
    matchLabels:
      networking/allow-ingress-to-prometheus: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/instance: kube-prometheus-stack-app
